# testinggoat

./: .gitignore  Dockerfile  Makefile  functional_tests.py  pyproject.toml
functional_tests/: tests.py
infra/: deploy-playbook.yaml
lists/: tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_list.py  0003_remove_list_items_item_list.py
lists/templates/: base.html  home.html  list.html
src/functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py  tests.py
src/lists/: forms.py  models.py  urls.py  views.py
src/lists/migrations/: 0004_alter_item_unique_together.py  0005_alter_item_options.py
src/lists/templates/: base.html  list.html
src/lists/tests/: test_all.py  test_forms.py  test_models.py  test_views.py
src/superlists/: settings.py  urls.py
superlists/: settings.py  urls.py
