[project]
name = "goat-book"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django<6",
    "gunicorn>=25.1.0",
    "lxml[cssselect]>=6.0.2",
    "selenium>=4.38.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "ansible>=13.3.0",
    "docker>=7.1.0",
]
